--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div id="character-select">
+  <h2>Escolha seu personagem:</h2>
+  <button id="girl">👧 Menina</button>
+  <button id="boy">👦 Menino</button>
+</div>
   <div class="app">
     <header>
       <h1>Forca</h1>
