--- a/index.html
+++ b/index.html
@@ -8,17 +8,11 @@
 </head>
 <body>
   <div id="character-select">
-  <h2>Escolha seu personagem:</h2>
-  <button id="girl">👧 Menina</button>
-  <button id="boy">👦 Menino</button> 
-  
-   <!-- Cabelinho ou chapéu -->
-<path class="part" id="p6" d="M165 75 Q190 50 215 75" stroke="#e5e7eb" stroke-width="5" fill="none"/>
+    <h2>Escolha seu personagem:</h2>
+    <button id="girl">👧 Menina</button>
+    <button id="boy">👦 Menino</button>
+  </div>
 
-<!-- Laço ou calça -->
-<path class="part" id="p7" d="M170 220 L170 250 M210 220 L210 250" stroke="#e5e7eb" stroke-width="5"/>
-
-</div>
   <div class="app">
     <header>
       <h1>Forca</h1>
@@ -31,16 +25,26 @@
     <div class="board">
       <div class="panel">
         <svg class="gallows" viewBox="0 0 300 300">
+          <!-- Estrutura da forca -->
           <line x1="20" y1="280" x2="160" y2="280" stroke="#6b7280" stroke-width="8"/>
           <line x1="60" y1="280" x2="60" y2="40"  stroke="#6b7280" stroke-width="8"/>
           <line x1="60" y1="40"  x2="190" y2="40"  stroke="#6b7280" stroke-width="8"/>
           <line x1="190" y1="40" x2="190" y2="70"  stroke="#6b7280" stroke-width="6"/>
+
+          <!-- Boneco padrão -->
           <circle class="part" id="p0" cx="190" cy="95" r="25" fill="none" stroke="#e5e7eb" stroke-width="5"/>
           <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185" stroke="#e5e7eb" stroke-width="5"/>
           <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160" stroke="#e5e7eb" stroke-width="5"/>
           <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160" stroke="#e5e7eb" stroke-width="5"/>
           <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220" stroke="#e5e7eb" stroke-width="5"/>
           <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220" stroke="#e5e7eb" stroke-width="5"/>
+
+          <!-- Personalização: p6 e p7 -->
+          <!-- p6: cabelinho (menina) ou chapéu (menino) -->
+          <path class="part" id="p6" d="M165 75 Q190 50 215 75" fill="none" stroke="#e5e7eb" stroke-width="5"/>
+
+          <!-- p7: laço (menina) ou calça (menino) -->
+          <path class="part" id="p7" d="M170 220 L170 250 M210 220 L210 250" stroke="#e5e7eb" stroke-width="5"/>
         </svg>
       </div>
 
