--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
           <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220" stroke="#e5e7eb" stroke-width="5"/>
           <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220" stroke="#e5e7eb" stroke-width="5"/>
 
-          <!-- Personalização: p6 e p7 -->
-          <!-- p6: cabelinho (menina) ou chapéu (menino) -->
-          <path class="part" id="p6" d="M165 75 Q190 50 215 75" fill="none" stroke="#e5e7eb" stroke-width="5"/>
+          <!-- p6: chapéu (menino) -->
+<path class="part" id="p6" d="M165 75 L215 75 L190 50 Z" fill="none" stroke="#e5e7eb" stroke-width="5"/>
 
-          <!-- p7: laço (menina) ou calça (menino) -->
-          <path class="part" id="p7" d="M170 220 L170 250 M210 220 L210 250" stroke="#e5e7eb" stroke-width="5"/>
+<!-- p7: calça (menino) -->
+<path class="part" id="p7" d="M170 220 L170 250 M210 220 L210 250" stroke="#e5e7eb" stroke-width="5"/>
+
         </svg>
       </div>
 
