--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   </div>
 
   <div class="app">
+    <div id="death-scene">
+  <div class="blood"></div>
+  <div class="death-message">“Não é pessoal. É a lei.”</div>
+</div>
+
     <header>
       <h1>Forca</h1>
       <div class="stats">
