--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
   <div class="app">
     <div id="death-scene">
+      <div id="victory-scene">
+  <div class="glow"></div>
+  <div class="victory-message">“Escapou dessa vez”</div>
+</div>
   <div class="blood"></div>
   <div class="death-message">“Não é pessoal. É a lei.”</div>
 </div>
