--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Seleção de personagem -->
   <div id="character-select">
     <h2>Escolha seu personagem:</h2>
     <button id="girl">👧 Menina</button>
@@ -14,46 +15,34 @@
   </div>
 
   <div class="app">
-    <div id="death-scene">
-      <div id="victory-scene">
-  <div class="glow"></div>
-  <div class="victory-message">“Escapou dessa vez”</div>
-</div>
-  <div class="blood"></div>
-  <div class="death-message">“Não é pessoal. É a lei.”</div>
-</div>
-
     <header>
       <h1>Forca</h1>
       <div class="stats">
         <div>🎯 <b id="category">Geral</b></div>
-        <div>❤️ Chances: <b id="lives">6</b></div>
+        <div>❤️ Chances: <b id="lives">8</b></div>
       </div>
     </header>
 
     <div class="board">
       <div class="panel">
-        <svg class="gallows" viewBox="0 0 300 300">
+        <svg class="gallows" viewBox="0 0 300 300" aria-label="Forca">
           <!-- Estrutura da forca -->
           <line x1="20" y1="280" x2="160" y2="280" stroke="#6b7280" stroke-width="8"/>
           <line x1="60" y1="280" x2="60" y2="40"  stroke="#6b7280" stroke-width="8"/>
           <line x1="60" y1="40"  x2="190" y2="40"  stroke="#6b7280" stroke-width="8"/>
           <line x1="190" y1="40" x2="190" y2="70"  stroke="#6b7280" stroke-width="6"/>
 
-          <!-- Boneco padrão -->
-          <circle class="part" id="p0" cx="190" cy="95" r="25" fill="none" stroke="#e5e7eb" stroke-width="5"/>
-          <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185" stroke="#e5e7eb" stroke-width="5"/>
-          <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160" stroke="#e5e7eb" stroke-width="5"/>
-          <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160" stroke="#e5e7eb" stroke-width="5"/>
-          <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220" stroke="#e5e7eb" stroke-width="5"/>
-          <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220" stroke="#e5e7eb" stroke-width="5"/>
+          <!-- Partes do boneco (p0–p5) -->
+          <circle class="part" id="p0" cx="190" cy="95" r="25" fill="none"/>
+          <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185"/>
+          <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160"/>
+          <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160"/>
+          <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220"/>
+          <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220"/>
 
-          <!-- p6: chapéu (menino) -->
-<path class="part" id="p6" d="M165 75 L215 75 L190 50 Z" fill="none" stroke="#e5e7eb" stroke-width="5"/>
-
-<!-- p7: calça (menino) -->
-<path class="part" id="p7" d="M170 220 L170 250 M210 220 L210 250" stroke="#e5e7eb" stroke-width="5"/>
-
+          <!-- Acessórios dinâmicos (p6–p7) definidos pelo JS -->
+          <path class="part" id="p6" d="" fill="none"></path>
+          <path class="part" id="p7" d="" fill="none"></path>
         </svg>
       </div>
 
@@ -70,8 +59,17 @@
         <div class="status" id="status"></div>
       </div>
     </div>
+  </div>
 
+  <!-- Overlays (fora da .app e não aninhados entre si) -->
+  <div id="death-scene">
+    <div class="blood"></div>
+    <div class="death-message">“Não é pessoal. É a lei.”</div>
+  </div>
 
+  <div id="victory-scene">
+    <div class="glow"></div>
+    <div class="victory-message">“Escapou dessa vez”</div>
   </div>
 
   <script src="script.js" defer></script>
