--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Seleção de personagem -->
+  <!-- Escolha de personagem -->
   <div id="character-select">
     <h2>Escolha seu personagem:</h2>
     <button id="girl">👧 Menina</button>
     <button id="boy">👦 Menino</button>
   </div>
 
+  <!-- Interface principal -->
   <div class="app">
     <header>
       <h1>Forca</h1>
@@ -24,6 +25,7 @@
     </header>
 
     <div class="board">
+      <!-- Painel da forca -->
       <div class="panel">
         <svg class="gallows" viewBox="0 0 300 300" aria-label="Forca">
           <!-- Estrutura da forca -->
@@ -32,7 +34,7 @@
           <line x1="60" y1="40"  x2="190" y2="40"  stroke="#6b7280" stroke-width="8"/>
           <line x1="190" y1="40" x2="190" y2="70"  stroke="#6b7280" stroke-width="6"/>
 
-          <!-- Partes do boneco (p0–p5) -->
+          <!-- Boneco padrão -->
           <circle class="part" id="p0" cx="190" cy="95" r="25" fill="none"/>
           <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185"/>
           <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160"/>
@@ -40,12 +42,13 @@
           <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220"/>
           <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220"/>
 
-          <!-- Acessórios dinâmicos (p6–p7) definidos pelo JS -->
+          <!-- Acessórios dinâmicos -->
           <path class="part" id="p6" d="" fill="none"></path>
           <path class="part" id="p7" d="" fill="none"></path>
         </svg>
       </div>
 
+      <!-- Painel de interação -->
       <div class="panel">
         <div class="word" id="word"></div>
         <div class="hint" id="hint"></div>
@@ -61,12 +64,14 @@
     </div>
   </div>
 
-  <!-- Overlays (fora da .app e não aninhados entre si) -->
+  <!-- Tela de derrota -->
   <div id="death-scene">
     <div class="blood"></div>
     <div class="death-message">“Não é pessoal. É a lei.”</div>
+    <button id="try-again" class="btn">🔁 Tente novamente</button>
   </div>
 
+  <!-- Tela de vitória -->
   <div id="victory-scene">
     <div class="glow"></div>
     <div class="victory-message">“Escapou dessa vez”</div>
