--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div id="death-scene">
     <div class="blood"></div>
     <div class="death-message">“Não é pessoal. É a lei.”</div>
-    <button id="try-again" class="btn">🔁 Tente novamente</button>
+    <button id="try-again" class="btn">Tente novamente</button>
   </div>
 
   <!-- Tela de vitória -->
