--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+  <!-- Dica contextual (aparece com 3 chances restantes) -->
+  <div id="contextual-hint" style="display: none; text-align: center; margin-bottom: 10px;">
+    <!-- Conteúdo gerado via JS -->
+  </div>
+
   <!-- Escolha de personagem -->
   <div id="character-select">
     <h2>Escolha seu personagem:</h2>
@@ -68,7 +74,7 @@
   <div id="death-scene">
     <div class="blood"></div>
     <div class="death-message">“Não é pessoal. É a lei.”</div>
-    <button id="try-again" class="btn">Tente novamente</button>
+    <button id="try-again" class="btn">🔁 Tente novamente</button>
   </div>
 
   <!-- Tela de vitória -->
