--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     <!-- Conteúdo gerado via JS -->
   </div>
 
+  <div id="theme-select">
+  <h2>Escolha o tema:</h2>
+  <button data-theme="pais">🌍 País</button>
+  <button data-theme="profissao">👩‍⚕️ Profissão</button>
+  <button data-theme="objeto">📦 Objeto</button>
+  <button data-theme="animal">🐾 Animal</button>
+  <button data-theme="estilo-musica">🎶 Estilo de Música</button>
+  <button data-theme="cantores">🎤 Cantores</button>
+  <button data-theme="filmes">🎬 Filmes</button>
+  <button data-theme="comida">🍔 Comida</button>
+</div>
+
   <!-- Escolha de personagem -->
   <div id="character-select">
     <h2>Escolha seu personagem:</h2>
