--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,72 +7,58 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <!-- Bloco de seleção inicial -->
-  <div id="character-select">
-    <h2 id="selection-title">Escolha seu personagem:</h2>
-    <div id="character-buttons">
+  <div class="app">
+    
+    <!-- Escolha de personagem -->
+    <div id="character-select">
+      <h2>Escolha seu personagem:</h2>
       <button id="girl">👧 Menina</button>
       <button id="boy">👦 Menino</button>
     </div>
 
-    <div id="theme-buttons" style="display: none;">
-      <h2>Escolha o tema:</h2>
-      <button data-theme="pais">🌍 País</button>
-      <button data-theme="profissao">👩‍⚕️ Profissão</button>
-      <button data-theme="objeto">📦 Objeto</button>
-      <button data-theme="animal">🐾 Animal</button>
-      <button data-theme="estilo-musica">🎶 Estilo de Música</button>
-      <button data-theme="cantores">🎤 Cantores</button>
-      <button data-theme="filmes">🎬 Filmes</button>
-      <button data-theme="comida">🍔 Comida</button>
+    <!-- Escolha de tema (aparece depois) -->
+    <h2 id="theme-title">Escolha o tema:</h2>
+    <div id="theme-select">
+      <button class="theme-btn" data-theme="pais">🌍 País</button>
+      <button class="theme-btn" data-theme="profissao">👔 Profissão</button>
+      <button class="theme-btn" data-theme="objeto">🧸 Objeto</button>
+      <button class="theme-btn" data-theme="animal">🐾 Animal</button>
+      <button class="theme-btn" data-theme="estilo-musica">🎶 Estilo de Música</button>
+      <button class="theme-btn" data-theme="cantores">🎤 Cantores</button>
+      <button class="theme-btn" data-theme="filmes">🎬 Filmes</button>
+      <button class="theme-btn" data-theme="comida">🍽️ Comida</button>
     </div>
-  </div>
 
-  <!-- Dica contextual -->
-  <div id="contextual-hint" style="display: none;"></div>
-
-  <!-- Interface principal -->
-  <div class="app">
-    <header>
-      <h1>Forca</h1>
-      <div class="stats">
-        <div>🎯 <b id="category">Geral</b></div>
-        <div>❤️ Chances: <b id="lives">8</b></div>
-      </div>
-    </header>
-
+    <!-- Painel do jogo -->
     <div class="board">
-      <!-- Painel da forca -->
-      <div class="panel">
-        <svg class="gallows" viewBox="0 0 300 300" aria-label="Forca">
-          <line x1="20" y1="280" x2="160" y2="280" stroke="#6b7280" stroke-width="8"/>
-          <line x1="60" y1="280" x2="60" y2="40"  stroke="#6b7280" stroke-width="8"/>
-          <line x1="60" y1="40"  x2="190" y2="40"  stroke="#6b7280" stroke-width="8"/>
-          <line x1="190" y1="40" x2="190" y2="70"  stroke="#6b7280" stroke-width="6"/>
-          <circle class="part" id="p0" cx="190" cy="95" r="25" fill="none"/>
-          <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185"/>
-          <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160"/>
-          <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160"/>
-          <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220"/>
-          <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220"/>
-          <path class="part" id="p6" d="" fill="none"></path>
-          <path class="part" id="p7" d="" fill="none"></path>
-        </svg>
-      </div>
-
-      <!-- Painel de interação -->
       <div class="panel">
         <div class="word" id="word"></div>
         <div class="hint" id="hint"></div>
+        <div id="contextual-hint"></div>
         <div class="keyboard" id="keyboard"></div>
-
         <div class="actions">
-          <button class="btn" id="shuffle">🔀 Outra palavra</button>
-          <button class="btn primary" id="reset">🔄 Reiniciar</button>
+          <button id="reset" class="btn">Reiniciar</button>
+          <button id="shuffle" class="btn">Nova Palavra</button>
         </div>
-
         <div class="status" id="status"></div>
+      </div>
+
+      <div class="panel">
+        <svg class="gallows" viewBox="0 0 400 400">
+          <!-- Estrutura da forca -->
+          <line id="p0" class="part" x1="50" y1="350" x2="350" y2="350" />
+          <line id="p1" class="part" x1="100" y1="350" x2="100" y2="50" />
+          <line id="p2" class="part" x1="100" y1="50" x2="250" y2="50" />
+          <line id="p3" class="part" x1="250" y1="50" x2="250" y2="100" />
+          <!-- Corpo do boneco -->
+          <circle id="p4" class="part" cx="250" cy="125" r="25" />
+          <line id="p5" class="part" x1="250" y1="150" x2="250" y2="250" />
+          <path id="p6" class="part" d="" />
+          <path id="p7" class="part" d="" />
+          <line id="p8" class="part" x1="250" y1="250" x2="230" y2="300" />
+        </svg>
+        <div><strong>Erros restantes:</strong> <span id="lives">8</span></div>
+        <div><strong>Tema:</strong> <span id="category">---</span></div>
       </div>
     </div>
   </div>
@@ -80,16 +66,16 @@
   <!-- Tela de derrota -->
   <div id="death-scene">
     <div class="blood"></div>
-    <div class="death-message">“Não é pessoal. É a lei.”</div>
-    <button id="try-again" class="btn">🔁 Tente novamente</button>
+    <div class="death-message">Você perdeu!</div>
+    <button id="try-again">Tentar novamente</button>
   </div>
 
   <!-- Tela de vitória -->
   <div id="victory-scene">
     <div class="glow"></div>
-    <div class="victory-message">“Escapou dessa vez”</div>
+    <div class="victory-message">Parabéns! Você venceu!</div>
   </div>
 
-  <script src="script.js" defer></script>
+  <script src="script.js"></script>
 </body>
 </html>
