--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div class="keyboard" id="keyboard"></div>
 
         <div class="actions">
-          <button class="btn" id="shuffle">Outra palavra</button>
-          <button class="btn primary" id="reset">Reiniciar</button>
+          <button class="btn" id="shuffle">🔀 Outra palavra</button>
+          <button class="btn primary" id="reset">🔄 Reiniciar</button>
         </div>
 
         <div class="status" id="status"></div>
@@ -58,16 +58,18 @@
     </div>
   </div>
 
+ <!-- Tela de derrota -->
   <div id="death-scene">
     <div class="blood"></div>
     <div class="death-message">“Não é pessoal. É a lei.”</div>
-    <button id="try-again-loss" class="btn">Tente novamente</button>
+    <button id="try-again-loss" class="btn">🔁 Tente novamente</button>
   </div>
 
+  <!-- Tela de vitória -->
   <div id="victory-scene">
     <div class="glow"></div>
     <div class="victory-message">“Escapou dessa vez”</div>
-    <button id="try-again-win" class="btn">Tente novamente</button>
+    <button id="try-again-win" class="btn">🔁 Tente novamente</button>
   </div>
 
   <script src="script.js" defer></script>
