--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <div id="character-select">
     <h2>Escolha seu personagem:</h2>
-    <button id="girl">👧 Menina</button>
-    <button id="boy">👦 Menino</button>
+    <button id="girl">🧒 Crianças</button>
+    <button id="boy">🧑 Adultos</button>
   </div>
 
   <div class="app">
