--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <div id="contextual-hint"></div>
 
   <div id="character-select">
-    <h2>Escolha o modo:</h2>
-    <button id="girl">🧒 Crianças</button>
-    <button id="boy">🧑 Adultos</button>
+    <h2>Escolha seu personagem:</h2>
+    <button id="girl">👧 Menina</button>
+    <button id="boy">👦 Menino</button>
   </div>
 
   <div class="app">
@@ -50,6 +50,7 @@
 
         <div class="actions">
           <button class="btn" id="shuffle">Outra palavra</button>
+          <button class="btn primary" id="reset">Reiniciar</button>
         </div>
 
         <div class="status" id="status"></div>
