--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
   <title>Jogo da Forca</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="sombrio">
 
   <div id="contextual-hint"></div>
 
-  <div id="character-select">
-    <h2>Escolha seu personagem:</h2>
-    <button id="girl">👧 Menina</button>
-    <button id="boy">👦 Menino</button>
+  <!-- Escolha de tema -->
+  <div id="theme-select">
+    <h2>Escolha o tema:</h2>
+    <button class="theme-btn" data-tema="animal">Animal 🐻</button>
+    <button class="theme-btn" data-tema="desenhos">Cartoons 👦</button>
+    <button class="theme-btn" data-tema="comida">Comida 🍕</button>
+    <button class="theme-btn" data-tema="filmes">Filmes 🎬</button>
+    <button class="theme-btn" data-tema="objeto">Objeto 📱</button>
+    <button class="theme-btn" data-tema="pais">País 🌍</button>
+    <button class="theme-btn" data-tema="profissoes">Profissões 👩‍⚕️</button>
   </div>
 
+  <!-- Área principal do jogo -->
   <div class="app">
     <header>
       <h1>Forca</h1>
@@ -26,6 +33,7 @@
     </header>
 
     <div class="board">
+      <!-- Painel da forca -->
       <div class="panel">
         <svg class="gallows" viewBox="0 0 300 300" aria-label="Forca">
           <line x1="20" y1="280" x2="160" y2="280" stroke="#6b7280" stroke-width="8"/>
@@ -38,11 +46,12 @@
           <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160"/>
           <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220"/>
           <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220"/>
-          <path class="part" id="p6" d=""/>
-          <path class="part" id="p7" d=""/>
+          <path class="part" id="p6" d="M165 75 Q190 50 215 75"/>
+          <path class="part" id="p7" d="M182 80 L190 70 L198 80 L190 90 Z"/>
         </svg>
       </div>
 
+      <!-- Painel de interação -->
       <div class="panel">
         <div class="word" id="word"></div>
         <div class="hint" id="hint"></div>
@@ -50,7 +59,6 @@
 
         <div class="actions">
           <button class="btn" id="shuffle">Outra palavra</button>
-          <button class="btn primary" id="reset">Reiniciar</button>
         </div>
 
         <div class="status" id="status"></div>
@@ -58,12 +66,14 @@
     </div>
   </div>
 
+  <!-- Tela de derrota -->
   <div id="death-scene">
     <div class="blood"></div>
     <div class="death-message">“Não é pessoal. É a lei.”</div>
     <button id="try-again-loss" class="btn">Tente novamente</button>
   </div>
 
+  <!-- Tela de vitória -->
   <div id="victory-scene">
     <div class="glow"></div>
     <div class="victory-message">“Escapou dessa vez”</div>
