--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <div id="theme-select">
     <h2>Escolha o tema:</h2>
     <button class="theme-btn" data-tema="animal">Animal 🐻</button>
-    <button class="theme-btn" data-tema="desenhos">Cartoons 👦</button>
+    <button class="theme-btn" data-tema="desenhos">cantores 🎤</button>
     <button class="theme-btn" data-tema="comida">Comida 🍕</button>
     <button class="theme-btn" data-tema="filmes">Filmes 🎬</button>
-    <button class="theme-btn" data-tema="objeto">Objeto 📱</button>
+    <button class="theme-btn" data-tema="objeto">Objeto 🧰</button>
     <button class="theme-btn" data-tema="pais">País 🌍</button>
     <button class="theme-btn" data-tema="profissoes">Profissões 👩‍⚕️</button>
   </div>
