--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
   <div id="contextual-hint"></div>
 
   <!-- Escolha de tema -->
-  <div id="theme-select">
-    <h2>Escolha o tema:</h2>
-    <button class="theme-btn" data-tema="animal">Animal 🐻</button>
-    <button class="theme-btn" data-tema="desenhos">cantores 🎤</button>
-    <button class="theme-btn" data-tema="comida">Comida 🍕</button>
+ <div id="theme-select">
+  <h2>Escolha o tema:</h2>
+  <div class="tema-botoes">
+    <button class="theme-btn" data-tema="animal">Animal 🐶</button>
+    <button class="theme-btn" data-tema="cantores">Cantores 🎤</button>
+    <button class="theme-btn" data-tema="comida">Comida 🍔</button>
     <button class="theme-btn" data-tema="filmes">Filmes 🎬</button>
     <button class="theme-btn" data-tema="objeto">Objeto 🧰</button>
     <button class="theme-btn" data-tema="pais">País 🌍</button>
     <button class="theme-btn" data-tema="profissoes">Profissões 👩‍⚕️</button>
   </div>
+</div>
 
   <!-- Área principal do jogo -->
   <div class="app">
