--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Escolha de tema -->
  <div id="theme-select">
-  <h2>Escolha o tema:</h2>
+  <h2>Escolha o tema:🕯️</h2>
   <div class="tema-botoes">
     <button class="theme-btn" data-tema="animal">Animal 🐶</button>
     <button class="theme-btn" data-tema="cantores">Cantores 🎤</button>
