--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
   <div id="contextual-hint"></div>
 
   <!-- Escolha de tema -->
- <div id="theme-select">
-  <h2>Escolha o tema:🕯️</h2>
-  <div class="tema-botoes">
-    <button class="theme-btn" data-tema="animal">Animal 🐶</button>
-    <button class="theme-btn" data-tema="cantores">Cantores 🎤</button>
-    <button class="theme-btn" data-tema="comida">Comida 🍔</button>
-    <button class="theme-btn" data-tema="filmes">Filmes 🎬</button>
-    <button class="theme-btn" data-tema="objeto">Objeto 🧰</button>
-    <button class="theme-btn" data-tema="pais">País 🌍</button>
-    <button class="theme-btn" data-tema="profissoes">Profissões 👩‍⚕️</button>
+  <div id="theme-select">
+    <h2>Escolha o tema:🕯️</h2>
+    <div class="tema-botoes">
+      <button class="theme-btn" data-tema="animal">Animal 🐶</button>
+      <button class="theme-btn" data-tema="cantores">Cantores 🎤</button>
+      <button class="theme-btn" data-tema="comida">Comida 🍔</button>
+      <button class="theme-btn" data-tema="filmes">Filmes 🎬</button>
+      <button class="theme-btn" data-tema="objeto">Objeto 🧰</button>
+      <button class="theme-btn" data-tema="pais">País 🌍</button>
+      <button class="theme-btn" data-tema="profissoes">Profissões 👩‍⚕️</button>
+    </div>
   </div>
-</div>
 
   <!-- Área principal do jogo -->
   <div class="app">
@@ -30,26 +30,33 @@
       <h1>Forca</h1>
       <div class="stats">
         <div>🎯 <b id="category">Geral</b></div>
-        <div>❤️ Chances: <b id="lives">8</b></div>
+        <div>❤️ Chances: <b id="lives">10</b></div>
       </div>
     </header>
 
     <div class="board">
       <!-- Painel da forca -->
       <div class="panel">
-        <svg class="gallows" viewBox="0 0 300 300" aria-label="Forca">
-          <line x1="20" y1="280" x2="160" y2="280" stroke="#6b7280" stroke-width="8"/>
-          <line x1="60" y1="280" x2="60" y2="40"  stroke="#6b7280" stroke-width="8"/>
-          <line x1="60" y1="40"  x2="190" y2="40"  stroke="#6b7280" stroke-width="8"/>
-          <line x1="190" y1="40" x2="190" y2="70"  stroke="#6b7280" stroke-width="6"/>
-          <circle class="part" id="p0" cx="190" cy="95" r="25"/>
-          <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185"/>
-          <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160"/>
-          <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160"/>
-          <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220"/>
-          <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220"/>
-          <path class="part" id="p6" d="M165 75 Q190 50 215 75"/>
-          <path class="part" id="p7" d="M182 80 L190 70 L198 80 L190 90 Z"/>
+        <svg class="gallows" viewBox="0 0 400 300" aria-label="Forca">
+          <!-- Estrutura da forca -->
+          <line x1="100" y1="250" x2="300" y2="250" stroke="#444" stroke-width="6"/>
+          <line x1="150" y1="250" x2="150" y2="50" stroke="#444" stroke-width="6"/>
+          <line x1="150" y1="50" x2="190" y2="50" stroke="#444" stroke-width="6"/>
+          <line x1="190" y1="50" x2="190" y2="70" stroke="#444" stroke-width="4"/>
+
+          <!-- Partes do boneco -->
+          <circle id="p0" cx="190" cy="95" r="25" class="part"/>         
+          <line id="p1" x1="190" y1="120" x2="190" y2="170" class="part"/>
+          <line id="p2" x1="190" y1="130" x2="170" y2="150" class="part"/>
+          <line id="p3" x1="190" y1="130" x2="210" y2="150" class="part"/>
+          <line id="p4" x1="190" y1="170" x2="170" y2="200" class="part"/>
+          <line id="p5" x1="190" y1="170" x2="210" y2="200" class="part"/>
+
+          <!-- Máscara estilo Jason -->
+          <circle id="p6" cx="180" cy="90" r="3" class="part mask-detail"/> <!-- olho esq -->
+          <circle id="p7" cx="200" cy="90" r="3" class="part mask-detail"/> <!-- olho dir -->
+          <path id="p8" d="M190 100 L188 104 L192 104 Z" class="part mask-detail"/> <!-- nariz -->
+          <path id="p9" d="M180 85 L185 80 M195 80 L200 85 M190 75 L190 70" class="part mask-red"/> <!-- marcas vermelhas -->
         </svg>
       </div>
 
