--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <line x1="150" y1="50" x2="190" y2="50" stroke="#444" stroke-width="6"/>
   <line x1="190" y1="50" x2="190" y2="70" stroke="#444" stroke-width="4"/>
 
-  <!-- Cabeça branca (máscara oval) -->
+  <!-- Máscara branca -->
   <ellipse id="p0" cx="190" cy="95" rx="22" ry="28" class="part mask-base"/>
 
   <!-- Olhos pretos -->
@@ -66,6 +66,7 @@
   <line id="p10" x1="190" y1="170" x2="170" y2="200" class="part"/>
   <line id="p11" x1="190" y1="170" x2="210" y2="200" class="part"/>
 </svg>
+
       </div>
 
       <!-- Painel de interação -->
