--- a/index.html
+++ b/index.html
@@ -47,17 +47,20 @@
   <!-- Máscara branca -->
   <ellipse id="p0" cx="190" cy="95" rx="22" ry="28" class="part mask-base"/>
 
-  <!-- Olhos pretos -->
-  <circle id="p1" cx="180" cy="90" r="3" class="part mask-eye"/>
-  <circle id="p2" cx="200" cy="90" r="3" class="part mask-eye"/>
+  <!-- Olhos maiores -->
+  <circle id="p1" cx="180" cy="90" r="5" class="part mask-eye"/>
+  <circle id="p2" cx="200" cy="90" r="5" class="part mask-eye"/>
 
-  <!-- Marcas vermelhas acima dos olhos -->
+  <!-- Marcas vermelhas grossas -->
   <path id="p3" d="M175 85 L185 80" class="part mask-red"/>
   <path id="p4" d="M195 80 L205 85" class="part mask-red"/>
-
-  <!-- Marcas vermelhas abaixo dos olhos -->
   <path id="p5" d="M175 95 L185 100" class="part mask-red"/>
   <path id="p6" d="M195 100 L205 95" class="part mask-red"/>
+
+  <!-- Pontinhos de respiração -->
+  <circle id="p12" cx="185" cy="105" r="1.5" class="part mask-dot"/>
+  <circle id="p13" cx="190" cy="107" r="1.5" class="part mask-dot"/>
+  <circle id="p14" cx="195" cy="105" r="1.5" class="part mask-dot"/>
 
   <!-- Corpo e membros -->
   <line id="p7" x1="190" y1="120" x2="190" y2="170" class="part"/>
