--- a/index.html
+++ b/index.html
@@ -37,45 +37,34 @@
     <div class="board">
       <!-- Painel da forca -->
       <div class="panel">
-    <svg class="gallows" viewBox="0 0 400 300" aria-label="Máscara Jason">
+    <svg class="gallows" viewBox="0 0 400 300" aria-label="Forca">
   <!-- Estrutura da forca -->
   <line x1="100" y1="250" x2="300" y2="250" stroke="#444" stroke-width="6"/>
   <line x1="150" y1="250" x2="150" y2="50" stroke="#444" stroke-width="6"/>
   <line x1="150" y1="50" x2="190" y2="50" stroke="#444" stroke-width="6"/>
   <line x1="190" y1="50" x2="190" y2="70" stroke="#444" stroke-width="4"/>
 
-  <!-- Máscara oval branca -->
-  <ellipse id="p0" cx="190" cy="95" rx="22" ry="28" class="part mask-base"/>
+  <!-- Cabeça transparente com contorno LED roxo -->
+  <ellipse id="p0" cx="190" cy="95" rx="20" ry="26" class="part mask-outline"/>
 
-  <!-- Olhos pretos grandes -->
-  <circle id="p1" cx="180" cy="90" r="5" class="part mask-eye"/>
-  <circle id="p2" cx="200" cy="90" r="5" class="part mask-eye"/>
+  <!-- X nos olhos -->
+  <path id="p1" d="M175 85 L185 95 M185 85 L175 95" class="part mask-led"/>
+  <path id="p2" d="M195 85 L205 95 M205 85 L195 95" class="part mask-led"/>
 
-  <!-- Triângulos vermelhos acima dos olhos -->
-  <path id="p3" d="M175 80 L180 75 L185 80 Z" class="part mask-red"/>
-  <path id="p4" d="M195 75 L200 80 L205 75 Z" class="part mask-red"/>
-
-  <!-- Triângulos vermelhos abaixo dos olhos -->
-  <path id="p5" d="M175 100 L180 105 L185 100 Z" class="part mask-red"/>
-  <path id="p6" d="M195 105 L200 100 L205 105 Z" class="part mask-red"/>
-
-  <!-- Triângulo cinza no nariz -->
-  <path id="p7" d="M190 100 L188 104 L192 104 Z" class="part mask-nose"/>
-
-  <!-- Furos de respiração -->
-  <circle id="p8" cx="180" cy="110" r="1.5" class="part mask-dot"/>
-  <circle id="p9" cx="185" cy="112" r="1.5" class="part mask-dot"/>
-  <circle id="p10" cx="190" cy="114" r="1.5" class="part mask-dot"/>
-  <circle id="p11" cx="195" cy="112" r="1.5" class="part mask-dot"/>
-  <circle id="p12" cx="200" cy="110" r="1.5" class="part mask-dot"/>
+  <!-- Boca costurada -->
+  <path id="p3" d="M175 110 Q190 120 205 110" class="part mask-led"/>
+  <line id="p4" x1="180" y1="112" x2="180" y2="118" class="part mask-led"/>
+  <line id="p5" x1="190" y1="114" x2="190" y2="120" class="part mask-led"/>
+  <line id="p6" x1="200" y1="112" x2="200" y2="118" class="part mask-led"/>
 
   <!-- Corpo e membros -->
-  <line id="p13" x1="190" y1="120" x2="190" y2="170" class="part"/>
-  <line id="p14" x1="190" y1="130" x2="170" y2="150" class="part"/>
-  <line id="p15" x1="190" y1="130" x2="210" y2="150" class="part"/>
-  <line id="p16" x1="190" y1="170" x2="170" y2="200" class="part"/>
-  <line id="p17" x1="190" y1="170" x2="210" y2="200" class="part"/>
+  <line id="p7" x1="190" y1="130" x2="190" y2="170" class="part"/>
+  <line id="p8" x1="190" y1="140" x2="170" y2="160" class="part"/>
+  <line id="p9" x1="190" y1="140" x2="210" y2="160" class="part"/>
+  <line id="p10" x1="190" y1="170" x2="170" y2="200" class="part"/>
+  <line id="p11" x1="190" y1="170" x2="210" y2="200" class="part"/>
 </svg>
+
 
       </div>
 
