--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
       50% { opacity: 0.4; stroke-width: 3.5; }
       100% { opacity: 1; stroke-width: 2.5; }
     }
+
+    .part {
+      visibility: hidden;
+    }
+
+    .part.show {
+      visibility: visible;
+    }
   </style>
 </head>
 <body class="sombrio">
@@ -70,25 +78,27 @@
           <line x1="150" y1="50" x2="190" y2="50" stroke="#444" stroke-width="6"/>
           <line x1="190" y1="50" x2="190" y2="70" stroke="#444" stroke-width="4"/>
 
-          <!-- Cabeça menor com contorno LED roxo -->
-          <ellipse id="p0" cx="190" cy="95" rx="16" ry="22" class="part mask-outline"/>
+          <!-- 1. Cabeça com capuz -->
+          <path id="p0" class="part mask-outline" d="M190 70 C160 90, 150 130, 160 180 C165 210, 180 240, 190 250 C200 240, 215 210, 220 180 C230 130, 220 90, 190 70 Z"/>
 
-          <!-- Olhos em X -->
-          <path id="p1" d="M178 88 L182 92 M182 88 L178 92" class="part mask-led"/>
-          <path id="p2" d="M198 88 L202 92 M202 88 L198 92" class="part mask-led"/>
+          <!-- 2. Olhos em X -->
+          <path id="p1" class="part mask-led" d="M178 110 L182 114 M182 110 L178 114"/>
+          <path id="p2" class="part mask-led" d="M198 110 L202 114 M202 110 L198 114"/>
 
-          <!-- Boca costurada -->
-          <path id="p3" d="M180 102 Q190 108 200 102" class="part mask-led"/>
-          <line id="p4" x1="183" y1="103" x2="183" y2="107" class="part mask-led"/>
-          <line id="p5" x1="190" y1="104" x2="190" y2="108" class="part mask-led"/>
-          <line id="p6" x1="197" y1="103" x2="197" y2="107" class="part mask-led"/>
+          <!-- 3. Nariz -->
+          <path id="p3" class="part mask-led" d="M185 130 Q190 135 195 130"/>
 
-          <!-- Corpo e membros -->
-          <line id="p7" x1="190" y1="120" x2="190" y2="170" class="part"/>
-          <line id="p8" x1="190" y1="140" x2="170" y2="160" class="part"/>
-          <line id="p9" x1="190" y1="140" x2="210" y2="160" class="part"/>
-          <line id="p10" x1="190" y1="170" x2="170" y2="200" class="part"/>
-          <line id="p11" x1="190" y1="170" x2="210" y2="200" class="part"/>
+          <!-- 4. Boca -->
+          <path id="p4" class="part mask-led" d="M180 150 Q190 170 200 150 Q190 160 180 150 Z"/>
+
+          <!-- 5. Tronco com capa -->
+          <path id="p5" class="part" d="M160 180 Q190 230 220 180" fill="#111" stroke="#eee" stroke-width="2"/>
+
+          <!-- 6. Manga esquerda -->
+          <path id="p6" class="part" d="M150 180 Q160 200 170 180" fill="#111" stroke="#eee" stroke-width="2"/>
+
+          <!-- 7. Manga direita -->
+          <path id="p7" class="part" d="M210 180 Q220 200 230 180" fill="#111" stroke="#eee" stroke-width="2"/>
         </svg>
       </div>
 
@@ -124,14 +134,13 @@
   <script>
     function mostrarParteDaForca(erros) {
       const ordem = [
-        ['p0'],                 // 1 - Cabeça
-        ['p1', 'p2'],           // 2 - Olhos em X
-        ['p3', 'p4', 'p5', 'p6'], // 3 - Boca costurada
-        ['p7'],                 // 4 - Tronco
-        ['p8'],                 // 5 - Braço esquerdo
-        ['p9'],                 // 6 - Braço direito
-        ['p10'],                // 7 - Perna esquerda
-        ['p11']                 // 8 - Perna direita
+        ['p0'],                 // Cabeça com capuz
+        ['p1', 'p2'],           // Olhos em X
+        ['p3'],                 // Nariz
+        ['p4'],                 // Boca
+        ['p5'],                 // Tronco com capa
+        ['p6'],                 // Manga esquerda
+        ['p7']                  // Manga direita
       ];
 
       const partes = ordem[erros - 1];
@@ -143,9 +152,8 @@
       });
     }
 
-    // Dentro da função handleGuess, no trecho de derrota:
     function ativarGlowDerrota() {
-      ['p1', 'p2', 'p3', 'p4', 'p5', 'p6'].forEach(id => {
+      ['p1', 'p2', 'p3', 'p4'].forEach(id => {
         document.getElementById(id)?.classList.add("mask-glow");
       });
     }
