--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
           <path class="part" id="p6" d=""/>
           <path class="part" id="p7" d=""/>
         </svg>
+        <div id="ghostface-container">
+  <img id="ghostface1" class="ghostface-part" src="imagens/ghostface.1.png" />
+  <img id="ghostface2" class="ghostface-part" src="imagens/ghostface.2.png" />
+  <img id="ghostface3" class="ghostface-part" src="imagens/ghostface.3.png" />
+  <img id="ghostface4" class="ghostface-part" src="imagens/ghostface.4.png" />
+  <img id="ghostface5" class="ghostface-part" src="imagens/ghostface.5.png" />
+  <img id="ghostface6" class="ghostface-part" src="imagens/ghostface.6.png" />
+  <img id="ghostface7" class="ghostface-part" src="imagens/ghostface.7.png" />
+  <img id="ghostface8" class="ghostface-part" src="imagens/ghostface.8.png" />
+</div>
+
       </div>
 
       <div class="panel">
