--- a/index.html
+++ b/index.html
@@ -27,31 +27,27 @@
 
     <div class="board">
       <div class="panel">
-        <svg class="gallows" viewBox="0 0 300 300" aria-label="Forca">
-          <line x1="20" y1="280" x2="160" y2="280" stroke="#6b7280" stroke-width="8"/>
-          <line x1="60" y1="280" x2="60" y2="40"  stroke="#6b7280" stroke-width="8"/>
-          <line x1="60" y1="40"  x2="190" y2="40"  stroke="#6b7280" stroke-width="8"/>
-          <line x1="190" y1="40" x2="190" y2="70"  stroke="#6b7280" stroke-width="6"/>
-          <circle class="part" id="p0" cx="190" cy="95" r="25"/>
-          <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185"/>
-          <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160"/>
-          <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160"/>
-          <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220"/>
-          <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220"/>
-          <path class="part" id="p6" d=""/>
-          <path class="part" id="p7" d=""/>
-        </svg>
-        <div id="ghostface-container">
-  <img id="ghostface1" class="ghostface-part" src="imagens/ghostface.1.png" />
-  <img id="ghostface2" class="ghostface-part" src="imagens/ghostface.2.png" />
-  <img id="ghostface3" class="ghostface-part" src="imagens/ghostface.3.png" />
-  <img id="ghostface4" class="ghostface-part" src="imagens/ghostface.4.png" />
-  <img id="ghostface5" class="ghostface-part" src="imagens/ghostface.5.png" />
-  <img id="ghostface6" class="ghostface-part" src="imagens/ghostface.6.png" />
-  <img id="ghostface7" class="ghostface-part" src="imagens/ghostface.7.png" />
-  <img id="ghostface8" class="ghostface-part" src="imagens/ghostface.8.png" />
-</div>
+        <div class="gallows">
+          <!-- Estrutura da forca (sem boneco SVG) -->
+          <svg viewBox="0 0 300 300" aria-label="Forca">
+            <line x1="20" y1="280" x2="160" y2="280" stroke="#6b7280" stroke-width="8"/>
+            <line x1="60" y1="280" x2="60" y2="40"  stroke="#6b7280" stroke-width="8"/>
+            <line x1="60" y1="40"  x2="190" y2="40"  stroke="#6b7280" stroke-width="8"/>
+            <line x1="190" y1="40" x2="190" y2="70"  stroke="#6b7280" stroke-width="6"/>
+          </svg>
 
+          <!-- Ghostface em partes -->
+          <div id="ghostface-container">
+            <img id="ghostface1" class="ghostface-part" src="imagens/ghostface.1.png" />
+            <img id="ghostface2" class="ghostface-part" src="imagens/ghostface.2.png" />
+            <img id="ghostface3" class="ghostface-part" src="imagens/ghostface.3.png" />
+            <img id="ghostface4" class="ghostface-part" src="imagens/ghostface.4.png" />
+            <img id="ghostface5" class="ghostface-part" src="imagens/ghostface.5.png" />
+            <img id="ghostface6" class="ghostface-part" src="imagens/ghostface.6.png" />
+            <img id="ghostface7" class="ghostface-part" src="imagens/ghostface.7.png" />
+            <img id="ghostface8" class="ghostface-part" src="imagens/ghostface.8.png" />
+          </div>
+        </div>
       </div>
 
       <div class="panel">
