--- a/index.html
+++ b/index.html
@@ -10,15 +10,9 @@
 
   <div id="contextual-hint"></div>
 
-  <div id="character-select">
-    <h2>Escolha seu personagem:</h2>
-    <button id="girl">👧 Menina</button>
-    <button id="boy">👦 Menino</button>
-  </div>
-
   <div class="app">
     <header>
-      <h1>Forca</h1>
+      <h1>Forca Sombria</h1>
       <div class="stats">
         <div>🎯 <b id="category">Geral</b></div>
         <div>❤️ Chances: <b id="lives">8</b></div>
@@ -28,18 +22,21 @@
     <div class="board">
       <div class="panel">
         <svg class="gallows" viewBox="0 0 300 300" aria-label="Forca">
+          <!-- Estrutura da forca -->
           <line x1="20" y1="280" x2="160" y2="280" stroke="#6b7280" stroke-width="8"/>
           <line x1="60" y1="280" x2="60" y2="40"  stroke="#6b7280" stroke-width="8"/>
           <line x1="60" y1="40"  x2="190" y2="40"  stroke="#6b7280" stroke-width="8"/>
           <line x1="190" y1="40" x2="190" y2="70"  stroke="#6b7280" stroke-width="6"/>
-          <circle class="part" id="p0" cx="190" cy="95" r="25"/>
-          <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185"/>
-          <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160"/>
-          <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160"/>
-          <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220"/>
-          <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220"/>
-          <path class="part" id="p6" d=""/>
-          <path class="part" id="p7" d=""/>
+
+          <!-- Partes do personagem -->
+          <circle class="part" id="p0" cx="190" cy="95" r="25"/> <!-- cabeça -->
+          <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185"/> <!-- tronco -->
+          <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160"/> <!-- braço esquerdo -->
+          <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160"/> <!-- braço direito -->
+          <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220"/> <!-- perna esquerda -->
+          <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220"/> <!-- perna direita -->
+          <path class="part" id="p6" d=""/> <!-- capuz -->
+          <path class="part" id="p7" d=""/> <!-- manto -->
         </svg>
       </div>
 
