--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
         </svg>
 
         <!-- Imagem da poça de sangue (PNG) -->
-        <img id="blood-image" src="imagem/blood.png" alt="Poça de sangue" />
+         <img
+  id="blood-image"
+  src="imagem/blood.png"
+  alt="Poça de sangue"
+  style="position: absolute; top: 70px; left: 160px; width: 50px; height: 50px; display: none; pointer-events: none;"
+/>
+
       </div>
 
       <div class="panel">
