--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 
   <div id="contextual-hint"></div>
   
-  <div class="app">
+<div class="app">
+  <div id="theme-select"></div> <!-- Botões de tema aparecem aqui -->
+  <header>
+    ...
     <header>
       <h1>Forca</h1>
       <div class="stats">
